apps/mobb-poc-frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobb-poc-frontend
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
    spec:
      containers:
        - name: mobb-poc-frontend
          image: mobb-poc-frontend
          resources:
            requests:
              memory: '64Mi'
              cpu: '0.25'
            limits:
              memory: '256Mi'
              cpu: '1'
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 10
