apps/mobb-poc-frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobb-poc-frontend
spec:
  selector:
    app: mobb-poc-frontend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
