apps/mobb-poc-frontend/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mobb-poc-frontend
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: mobb-poc-frontend
    weight: 100
  wildcardPolicy: None
